--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                       	  	    <div class="heading p-5  text-white">
                       	  	  	     
 
-                                        <div class="d-flex flex-row bg-dark justify-content-between  align-items-center">
+                                        <div class="d-flex flex-row justify-content-between  align-items-center">
                       	  	  	 
                                              <h1 class="display-4"> Raman Subedi</h1>
 
