--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
                       <div class="col-lg-8 col-md-8">
                       	  
-                      	  <div class="tophead" class="d-flex flex-column">
+                      	  <div class="tophead" class="d-flex flex-column bg-dark">
 
                       	  	    <div class="heading p-5  text-white">
                       	  	  	     
