--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
                 <footer class="base p-5 bg-dark text-center">
                       
                           <div class="btn">
-                             <a href="./Resume.jpg" download="Resume" class="download-btn">Download
+                             <a href="./Resume.pdf" download="Resume" class="download-btn">Download
                                  <i class="fa fa-download fa-2x "></i>
                              </a>
                           </div>
