--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
 
        
             <div class="container">
-                <footer class="base p-5 bg-dark text-center">
+                <footer class="base p-5 text-center">
                       
                           <div class="btn">
                              <a href="./Resume.pdf" download="Resume" class="download-btn">Download
