--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                       	  	    </div>
 
                       	  	    <div class="p-3 text-white  bg-black">
-                      	  	    	Web Developer and Youtuber
+                      	  	    	Web Developer and Programmer
                       	  	    </div>
 
                       	  	    <div class="d-flex flex-row  text-center  text-white">
